2002-01-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Modified type.mgk so that it may include the additional files
    type-windows.mgk, type-solaris.mgk, and type-ghostscript.mgk depending
    on the operating system used, and the font files available.

2002-01-11  Leonard Rosenthol  <leonardr@lazerware.com>
  * PSD now supports writing layered images and IPTC data.
  * Fixed some bugs in XCF.

2002-01-11  Cristy  <cristy@mystic.es.dupont.com>
  * Added image list methods to the API.

2002-01-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * configure.ac : Renamed configure option --with-ttf-fontpath to
    --with-fontpath since ImageMagick loads more than TrueType fonts.
  * ChangeLog : Renamed Changelog.txt to ChangeLog in order to conform
    to GNU and open-source standards.

2002-01-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Makefile.am : $(DESTDIR) already contains trailing '/'.

2002-01-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * coders/wmf.c (wmf_magick_device_begin): Fix non-opaque fills.
    Now properly fills with texture image.

2002-01-05  Glenn Randers-Pehrson  <randeg@alum.rpi.edu>
  * Fixed an out-of-bounds memset() and two other memory overruns when
    decoding 1-bit AVI, BMP, and DIB images.

2002-01-04 Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * Fix lcms header inclusion in transform.c.

2002-01-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
  * coders/wmf.c (magick_brush): Fixed bug with setting fill color.

2002-01-03  Cristy  <cristy@mystic.es.dupont.com>
  * Postscript Level II is now DCS compliant.

2001-12-28  Leonard Rosenthol  <leonardr@lazerware.com>
  * Even more features and options were added to conjure
  * Added CropBox support to PDF writer
  
2001-12-26  Leonard Rosenthol  <leonardr@lazerware.com>
  * Conjure now supports having a list of files for the script to
    process being passed on the command line.
  * More features and options were added to conjure
  